# tutoring-assistant

./: .gitignore  Dockerfile  Dockerfile.production  PRODUCTION_GUIDE.md  README.md  api.py  demo.py  docker-compose.production.yml  docker-compose.yml  env.template  nginx.conf  pyproject.toml  requirements-simple.txt  requirements-vercel-light.txt  requirements-vercel.txt  requirements.txt  vercel.json  vercel.py  vercel_main.py
app/: __init__.py  main.py
app/api/: auth.py  chat.py  content.py  dependencies.py  quiz.py  vercel_chat.py
app/core/: config.py  database.py  production_config.py  security.py  vercel_config.py
app/models/: chat.py  content.py  quiz.py  user.py
app/services/: chromadb_service.py  llm_service.py  openai_service.py  rag_orchestrator.py  simple_chromadb_service.py  simple_llm_service.py  simple_openai_service.py  simple_rag_orchestrator.py  simple_vector_service.py  simple_vector_store.py  vector_store.py
app/utils/: document_processor.py  rate_limiter.py
examples/: api_usage.py
frontend/: README.md  dashboard.html  index.html  landing.html
frontend/js/: app.js
scripts/: deploy_production.sh  init.sql  setup.sh
