[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutoring-assistant"
version = "0.1.0"
description = "A personalized tutoring assistant with RAG capabilities"
authors = [{name = "Tutoring Assistant Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "chromadb>=0.4.18",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "openai>=1.3.7",
    "transformers>=4.36.2",
    "sentence-transformers>=2.2.2",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
